# backend/main/presentation/openapi_server/models/home_get_response.py
@@ -13,18 +13,18 @@ from openapi_server import util
 from openapi_server.models.items import Items  # noqa: E501
 from openapi_server.models.open_auction import OpenAuction  # noqa: E501
 
-class Home(Model):
+class HomeGetResponse(Model):
     """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
 
     Do not edit the class manually.
     """
 
     def __init__(self, auction=None, items=None):  # noqa: E501
-        """Home - a model defined in OpenAPI
+        """HomeGetResponse - a model defined in OpenAPI
 
-        :param auction: The auction of this Home.  # noqa: E501
+        :param auction: The auction of this HomeGetResponse.  # noqa: E501
         :type auction: OpenAuction
-        :param items: The items of this Home.  # noqa: E501
+        :param items: The items of this HomeGetResponse.  # noqa: E501
         :type items: Items
         """
         self.openapi_types = {
@@ -41,32 +41,32 @@ class Home(Model):
         self._items = items
 
     @classmethod
-    def from_dict(cls, dikt) -> 'Home':
+    def from_dict(cls, dikt) -> 'HomeGetResponse':
         """Returns the dict as a model
 
         :param dikt: A dict.
         :type: dict
-        :return: The home of this Home.  # noqa: E501
-        :rtype: Home
+        :return: The home_get_response of this HomeGetResponse.  # noqa: E501
+        :rtype: HomeGetResponse
         """
         return util.deserialize_model(dikt, cls)
 
     @property
     def auction(self):
-        """Gets the auction of this Home.
+        """Gets the auction of this HomeGetResponse.
 
 
-        :return: The auction of this Home.
+        :return: The auction of this HomeGetResponse.
         :rtype: OpenAuction
         """
         return self._auction
 
     @auction.setter
     def auction(self, auction):
-        """Sets the auction of this Home.
+        """Sets the auction of this HomeGetResponse.
 
 
-        :param auction: The auction of this Home.
+        :param auction: The auction of this HomeGetResponse.
         :type auction: OpenAuction
         """
 
@@ -74,20 +74,20 @@ class Home(Model):
 
     @property
     def items(self):
-        """Gets the items of this Home.
+        """Gets the items of this HomeGetResponse.
 
 
-        :return: The items of this Home.
+        :return: The items of this HomeGetResponse.
         :rtype: Items
         """
         return self._items
 
     @items.setter
     def items(self, items):
-        """Sets the items of this Home.
+        """Sets the items of this HomeGetResponse.
 
 
-        :param items: The items of this Home.
+        :param items: The items of this HomeGetResponse.
         :type items: Items
         """
 
